--- a/GE.WebUI/Content/less/aphorisms.less
+++ b/GE.WebUI/Content/less/aphorisms.less
@@ -4,7 +4,7 @@
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 .aphorisms {
-    background-color: @color-white;
+    color: @color-white;
     margin-top: @def-pad*2;
     min-height: 120px;
 }
