--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -20,8 +20,7 @@
 
 .m-html {
     margin-top: @def-pad * 2;
-    background-color: @color-white;
-    padding: @def-pad;
+    color: @color-white;
     display: inline-block;
     width: 100%;
     font-size: 15px;
@@ -90,8 +89,6 @@
 
 .m-info {
     margin-top: @def-pad*2;
-    background-color: @color-white;
-    padding: 10px @def-pad;
 }
 
 .m-info .mat-info {
@@ -124,7 +121,7 @@
     padding: 10px;
     padding-bottom: @def-pad;
     margin-top: @def-pad*2;
-    background-color: @color-white;
+    color: @color-white;
     border-left-color: @color-red;
     font-size: 1em;
     padding-right: @def-pad;
