--- a/GE.WebUI/Content/less/video.less
+++ b/GE.WebUI/Content/less/video.less
@@ -11,6 +11,7 @@
     background-size: cover;
     background-position: center center;
     display: table;
+    box-shadow: -1px 1px 8px rgba(255,255,255,0.2);
 }
 
 .video > .v-p-wr {
