--- a/GE.WebUI/Views/Aphorism/_Random.cshtml
+++ b/GE.WebUI/Views/Aphorism/_Random.cshtml
@@ -4,5 +4,7 @@
 }
 
 <section class="aphorisms">
+    <h3 class="header">Случайный афоризм</h3>
+    <br />
     @Html.DisplayForModel()
 </section>
