--- a/GE.WebUI/Views/MaterialTags/_TagsCloud.cshtml
+++ b/GE.WebUI/Views/MaterialTags/_TagsCloud.cshtml
@@ -11,7 +11,7 @@
     <div class="tags-block">
         @if (showHeader)
         {
-            <h3>Облако тегов</h3>
+            <h3 class="header">Облако тегов</h3>
         }
         @Html.SxTagsCloud(Model, url, maxFs)
     </div>
