--- a/GE.WebUI/Views/Shared/_ByDateMaterial.cshtml
+++ b/GE.WebUI/Views/Shared/_ByDateMaterial.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="by-date-m">
-    <h3>Другие @(mct == SX.WebCore.Enums.ModelCoreType.Article ? "статьи" : "новости")</h3>
+    <h3 class="header">Другие @(mct == SX.WebCore.Enums.ModelCoreType.Article ? "статьи" : "новости")</h3>
     <div class="row">
         @for (int i = 0; i < itemsCount; i++)
         {
