--- a/GE.WebAdmin/Views/Videos/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Videos/_GridView.cshtml
@@ -13,8 +13,9 @@
                 UpdateTargetId = "grid-videos",
                 Data = Model,
                 Columns = new SxExtantions.SxGridViewColumn<VMVideo>[]{
-            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Title", Caption="Название видео"},
+                    //new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Id", Caption="Внутренний идентификатор"},
             new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="VideoId", Caption="Идентификатор"},
+            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Title", Caption="Название видео"},
             new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="SourceUrl", Caption="Источник"}
         },
                 PagerInfo = pagerInfo,
