--- a/GE.WebUI/Views/Aphorism/DisplayTemplates/VMAphorism.cshtml
+++ b/GE.WebUI/Views/Aphorism/DisplayTemplates/VMAphorism.cshtml
@@ -12,7 +12,7 @@
     <div class="aph-html">
         @Html.Raw(Model.Html)
     </div>
-    <div class="text-right">
+    <div class="text-left">
         <br />
         <a class="btn btn-default btn-sm" href="@Url.Action(MVC.Aphorisms.Details(categoryId: Model.CategoryId, titleUrl: Model.TitleUrl))">Подробнее</a>
     </div>
