--- a/GE.WebUI/Views/Games/_GameList.cshtml
+++ b/GE.WebUI/Views/Games/_GameList.cshtml
@@ -18,7 +18,30 @@
                 @for (int i = 0; i < Model.Length; i++)
                 {
                     var item = Model.Games[i];
-                    var url = actionName == "list" || actionName=="index" ? Url.Action(actionName, new { controller = controllerName, gameTitle = item.TitleUrl }) : Url.Action("list", new { controller = controllerName, gameTitle = item.TitleUrl });
+                    var url = string.Empty;
+                    switch(controllerName)
+                    {
+                        case "home":
+                            url = Url.Action("details", new { controller = "games", titleUrl = item.TitleUrl });
+                            break;
+                        case "aphorisms":
+                            url = Url.Action("details", new { controller = "games", titleUrl = item.TitleUrl });
+                            break;
+                        case "games":
+                            url = Url.Action("details", new { controller = "games", titleUrl = item.TitleUrl });
+                            break;
+                        case "articles":
+                            url=actionName == "list" || actionName == "index" ? Url.Action(actionName, new { controller = controllerName, gameTitle = item.TitleUrl }) : Url.Action("list", new { controller = controllerName, gameTitle = item.TitleUrl });
+                            break;
+                        case "news":
+                            url = actionName == "list" || actionName == "index" ? Url.Action(actionName, new { controller = controllerName, gameTitle = item.TitleUrl }) : Url.Action("list", new { controller = controllerName, gameTitle = item.TitleUrl });
+                            break;
+                        default:
+                            url = "#";
+                            break;
+
+                    }
+
                     <li style="width:@(length + "%")" @(item.TitleUrl.ToLower() == gameName ? "class=active" : null)>
                         <a href="@url" title="@item.Title" data-toggle="tooltip" data-placement="bottom" class="red-tooltip ">
                             <img alt="@item.Title" src="@Url.Action(MVC.Pictures.Picture(item.FrontPictureId, height: 80))" />
