--- a/GE.WebUI/Views/Shared/_LikeMaterial.cshtml
+++ b/GE.WebUI/Views/Shared/_LikeMaterial.cshtml
@@ -8,7 +8,7 @@
 @if (Model.Any())
 {
     <div class="like-mats">
-        <h3>Похожие материалы</h3>
+        <h3 class="header">Похожие материалы</h3>
         <br />
         @for (int r = 0; r < rowsCount; r++)
                 {
