--- a/GE.WebUI/Content/less/last-news-block.less
+++ b/GE.WebUI/Content/less/last-news-block.less
@@ -376,8 +376,10 @@
     z-index: 1;
     box-shadow: -4px 4px 4px rgba(0,0,0,0.2);
     width: 100%;
-    padding-top: @def-pad*3;
     display:none;
+    background-color:@color-white;
+    padding:@def-pad;
+    padding-top: @def-pad*3;
 }
 
 .lgnb-tags > .tags-block .current > a {
