--- a/GE.WebUI/Content/less/like-mats.less
+++ b/GE.WebUI/Content/less/like-mats.less
@@ -13,7 +13,12 @@
     color: @color-white;
     width: 100%;
     position: relative;
+    background: linear-gradient(to left,rgba(255,255,255,.3),rgba(255,255,255,.2),rgba(255,255,255,.1));
+    border: 1px solid rgba(255,255,255,.1);
+    border-radius:3px;
+    padding:@def-pad;
     padding-bottom:@def-pad*2;
+    cursor:pointer;
 
     @media (max-width: @screen-xs-max) {
         display: block;
@@ -28,12 +33,24 @@
     }
 
     @media (min-width: @screen-lg-min) {
+        transition:all .2s;
     }
 }
 
 .like-mats .like-mat:hover{
-    cursor:pointer;
-    box-shadow: -1px 1px 6px rgba(0,0,0,0.2);
+    @media (max-width: @screen-xs-max) {
+        
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+        box-shadow:1px 1px 8px rgba(255,255,255,.5);
+    }
 }
 
 .like-mats .like-mat a {
@@ -49,6 +66,7 @@
     position:absolute;
     bottom:0;
     left:0;
+    padding:0 0 10px @def-pad;
 }
 
 .like-mats .row {
