--- a/GE.WebUI/Content/less/game-details.less
+++ b/GE.WebUI/Content/less/game-details.less
@@ -54,7 +54,7 @@
     }
 
     @media (min-width: @screen-lg-min) {
-        box-shadow:1px 1px 8px rgba(255,255,255,1);
+        box-shadow:1px 1px 8px rgba(255,255,255,.5);
     }
 }
 
