--- a/GE.WebUI/Content/less/last-news-block.less
+++ b/GE.WebUI/Content/less/last-news-block.less
@@ -80,7 +80,7 @@
 
 .l-n-b .content {
     margin-top: @def-pad;
-    background-color: @color-white;
+    background: @color-white;
 
     @media (max-width: @screen-xs-max) {
         background-color: unset;
