--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -86,6 +86,11 @@ body {
     color:@color-dark-blue;
 }
 
+.btn-transparent.muted-blue{
+    border:1px solid @color-muted-blue;
+    color:@color-muted-blue;
+}
+
 .btn-transparent.white{
     border:1px solid @color-white;
     color:@color-white;
