--- a/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
@@ -57,6 +57,6 @@
 <div class="info">
     <div class="row">
         <div class="col-md-6">@Html.DisplayFor(x => info)</div>
-        <div class="col-md-6"><a class="btn btn-default btn-transparent dark-blue" href="@Url.Action(MVC.Articles.Details(year, month, day, titleUrl))">Подробнее</a></div>
+        <div class="col-md-6"><a class="btn btn-default btn-transparent muted-blue" href="@Url.Action(MVC.Articles.Details(year, month, day, titleUrl))">Подробнее</a></div>
     </div>
 </div>
