--- a/GE.WebAdmin/Views/News/Edit.cshtml
+++ b/GE.WebAdmin/Views/News/Edit.cshtml
@@ -201,6 +201,7 @@
         $(function () {
             $('#DateOfPublication').closest('.date').datetimepicker({
                 locale: 'ru',
+                format: 'DD.MM.YY HH:mm',
                 icons: {
                     time: 'fa fa-clock-o',
                     date: 'fa fa-calendar',
