--- a/GE.WebUI/Content/less/list-news.less
+++ b/GE.WebUI/Content/less/list-news.less
@@ -4,10 +4,13 @@
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 .list-news {
-    background-color: @color-white;
     height:100%;
     display:inline-table;
+    border-radius:3px;
+    background: linear-gradient(to left,rgba(255,255,255,.3),rgba(255,255,255,.2),rgba(255,255,255,.1));
+    border: 1px solid rgba(255,255,255,.1);
     width:100%;
+    color:@color-white;
     @media (max-width: @screen-xs-max) {
         margin-top: @def-pad*2;
         width:100%;
@@ -24,12 +27,20 @@
     }
 }
 
+.list-news > .row {
+    display:table;
+    height:100%;
+}
+
 .list-news > .row > div{
     display:table-cell;
+    float:none;
+    vertical-align: top;
     @media (max-width: @screen-xs-max) {
         display: inline-block;
         float:left;
         width:100%;
+        vertical-align: unset;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -46,9 +57,14 @@
     overflow: hidden;
     position: absolute;
     width: 100%;
+    height:100%;
+    background-size:cover;
+    background-position:center center;
     @media (max-width: @screen-xs-max) {
         position:unset;
         height:auto !important;
+        min-height:170px;
+        background-position:unset;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -90,7 +106,7 @@
 
 .list-news .content .link {
     font-size: 22px;
-    color: @color-dark-blue;
+    color: @color-muted-blue;
     font-weight: 700;
     line-height: 1;
     display: block;
