--- a/GE.WebUI/Views/Account/Register.cshtml
+++ b/GE.WebUI/Views/Account/Register.cshtml
@@ -14,29 +14,32 @@
         @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal transparent", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(m => m.NikName, new { @class = "col-md-3 control-label" })
                 <div class="col-md-9">
                     @Html.TextBoxFor(m => m.NikName, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m=>m.NikName)
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
                 <div class="col-md-9">
                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Email)
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label" })
                 <div class="col-md-9">
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Password)
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 control-label" })
                 <div class="col-md-9">
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.ConfirmPassword)
                 </div>
             </div>
             <div class="form-group">
@@ -49,5 +52,6 @@
 </div>
 
 @section Scripts {
-    <script src="~/Content/dist/js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="~/Content/dist/js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="~/Content/dist/js/jquery.validate.unobtrusive.min.js"></script>
 }
