--- a/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
+++ b/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
@@ -14,15 +14,15 @@
 
 <div class="row">
     <div class="col-md-6 hidden-sm">
-        <figure class="mat-f-p">
-            @if (Model.FrontPictureId != null)
+        <figure class="mat-f-p" style="background-image:url(@(Model.FrontPictureId != null?@Url.Action(MVC.Pictures.Picture((Guid)picureId, height: 300)):"~/Content/dist/i/article-empty.png"))">
+            @*@if (Model.FrontPictureId != null)
             {
                 <img alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)picureId, height: 300))" />
             }
             else
             {
                 <img alt="@Model.Title" src="~/Content/dist/i/article-empty.png" />
-            }
+            }*@
         </figure>
     </div>
     <div class="col-md-6">
@@ -40,7 +40,7 @@
                     <i>; игра: <strong>@Model.Game.Title</strong></i>
                 }
             </div>
-            <a href="@url" class="btn btn-default btn-transparent dark-blue visible-xs">Подробнее</a>
+            <a href="@url" class="btn btn-default btn-transparent muted-blue visible-xs">Подробнее</a>
         </div>
     </div>
 </div>
