--- a/GE.WebAdmin/Views/Articles/Edit.cshtml
+++ b/GE.WebAdmin/Views/Articles/Edit.cshtml
@@ -201,7 +201,7 @@
         $(function () {
             $('#DateOfPublication').closest('.date').datetimepicker({
                 locale: 'ru',
-                format: 'DD.MM.YY HH:mm',
+                format: 'DD.MM.YYYY HH:mm',
                 icons: {
                     time: 'fa fa-clock-o',
                     date: 'fa fa-calendar',
