--- a/GE.WebUI/Content/less/game-details.less
+++ b/GE.WebUI/Content/less/game-details.less
@@ -22,7 +22,6 @@
     padding:@def-pad;
     border-radius:3px;
     margin-top:@def-pad*2;
-    cursor:pointer;
     @media (max-width: @screen-xs-max) {
         
     }
@@ -58,6 +57,29 @@
     }
 }
 
+.game-datails .dg-lm > .row{
+    display:table;
+}
+
+.game-datails .dg-lm > .row > div{
+    display:table-cell;
+    float:none;
+    vertical-align:top;
+    height:100%;
+}
+
+.game-datails .dg-lm figure{
+    position:absolute;
+    width:100%;
+    height:100%;
+    background-size:cover;
+    background-position: center center;
+}
+
+.game-datails .dg-lm .content{
+    padding: 0 @def-pad;
+}
+
 .game-datails .dg-lm .date{
     font-size:0.9em;
 }
@@ -74,4 +96,19 @@
 
 .game-datails .details{
     display:none;
+}
+
+.game-datails .dg-lm .mat-info {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: @def-pad;
+    font-size: .9em;
+}
+
+.game-datails .dg-lm .video-container{
+    width:100%;
+    height:100%;
+    position:absolute;
+    right: @def-pad;
 }
