--- a/GE.WebUI/Views/Games/_GameList.cshtml
+++ b/GE.WebUI/Views/Games/_GameList.cshtml
@@ -10,7 +10,7 @@
         <div class="container">
             <ul>
                 <li style="width:@(length + "%")" @(gameName == null ? "class=active" : null)>
-                    <a href="@(controllerName != "home" ? Url.Action("list", new { controller = controllerName, gameTitle = (string)null }) : "/")" title="Показать все" data-toggle="tooltip" data-placement="bottom" class="red-tooltip">
+                    <a href="@(controllerName != "home" && controllerName!="games" ? Url.Action("list", new { controller = controllerName, gameTitle = (string)null }) : "/")" title="Показать все" data-toggle="tooltip" data-placement="bottom" class="red-tooltip">
                         <img alt="Показать все" src="@(Model.EmptyGame.IconPath)" />
                     </a>
                 </li>
