--- a/GE.WebUI/Views/Games/Details.cshtml
+++ b/GE.WebUI/Views/Games/Details.cshtml
@@ -16,6 +16,9 @@
     <div class="articles">
         @Html.Partial(MVC.Games.Views._DetailGameMaterials, Model.GetMaterialsByCoreType(SX.WebCore.Enums.ModelCoreType.Article), new ViewDataDictionary { { "ModelCoreType", SX.WebCore.Enums.ModelCoreType.Article } })
     </div>
+    <div class="aphorisms">
+        @Html.Partial(MVC.Games.Views._DetailGameMaterials, Model.GetMaterialsByCoreType(SX.WebCore.Enums.ModelCoreType.Aphorism), new ViewDataDictionary { { "ModelCoreType", SX.WebCore.Enums.ModelCoreType.Aphorism }, { "GameTitle", Model.Title } })
+    </div>
 </div>
 
 @section scripts{
