--- a/GE.WebUI/Views/Games/DisplayTemplates/VMDetailGameMaterial.cshtml
+++ b/GE.WebUI/Views/Games/DisplayTemplates/VMDetailGameMaterial.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
     var hasVideo = Model.Videos.Any();
+    var isAphorism = Model.ModelCoreType == SX.WebCore.Enums.ModelCoreType.Aphorism;
 }
 <div class="dg-lm">
     <div class="row">
@@ -10,7 +11,7 @@
         <div class="col-md-2">
             @if (Model.FrontPictureId.HasValue)
             {
-                <figure style="background-image:url(@(Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId, width: 300))))" onclick="changeLocation($(this).closest('.dg-lm'))">
+                <figure class="@(isAphorism?"img-circle":null)" style="background-image:url(@(Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId, width: 300))))" onclick="changeLocation($(this).closest('.dg-lm'))">
 
                 </figure>
             }
