--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -8,10 +8,12 @@
 <h2>@ViewBag.Title</h2>
 @if (!isNew)
 {
-    <form method="post" action="@Url.Action(MVC.Aphorisms.Delete(cat: Model.CategoryId, id: Model.Id, mct: SX.WebCore.Enums.ModelCoreType.Aphorism))">
-        @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-danger pull-right" onclick="if (!confirm('Удалить запись?')) { return false;}">Удалить афоризм</button>
-    </form>
+    <div class="text-right">
+        <form method="post" action="@Url.Action(MVC.Aphorisms.Delete(cat: Model.CategoryId, id: Model.Id, mct: SX.WebCore.Enums.ModelCoreType.Aphorism))">
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-danger" onclick="if (!confirm('Удалить запись?')) { return false;}">Удалить афоризм</button>
+        </form>
+    </div>
 }
 <br />
 <form method="post" action="@Url.Action(MVC.Aphorisms.Edit())">
@@ -19,10 +21,21 @@
     @Html.HiddenFor(x => x.Id)
     @Html.HiddenFor(x => x.CategoryId)
 
-    <div class="form-group">
-        @Html.LabelFor(x => x.Title, new { @class = "control-label" })
-        @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок" } })
-        @Html.ValidationMessageFor(x => x.Title)
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок" } })
+                @Html.ValidationMessageFor(x => x.Title)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.Show, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Show)
+            </div>
+        </div>
     </div>
 
     <div class="form-group">
