--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -274,7 +274,10 @@
                                         <a href="@Url.Action(MVC.Roles.Index())"><i class="fa fa-fw fa-street-view"></i> Роли</a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action(MVC.Users.Index())"><i class="fa fa-fw fa-users"></i> Пользователи</a>
+                                        <a href="@Url.Action(MVC.Users.Index())"><i class="fa fa-fw fa-user"></i> Пользователи</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.Employees.Index())"><i class="fa fa-fw fa-male"></i> Сотрудники</a>
                                     </li>
                                     <li>
                                         <a href="@Url.Action(MVC.Statistics.StatUserLogins())"><i class="fa fa-fw fa-sign-in"></i> Статистика входов</a>
