--- a/GE.WebUI/Views/Aphorisms/List.cshtml
+++ b/GE.WebUI/Views/Aphorisms/List.cshtml
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="col-md-3">
-            @Html.Action(MVC.Aphorisms.Categories(curCat: curName, onlyNotCurrent: false))
+            @Html.Action(MVC.Aphorisms.Categories(curCat: categoryId, onlyNotCurrent: false))
         </div>
     </div>
 </div>
