--- a/GE.WebAdmin/Views/Users/_UserInfo.cshtml
+++ b/GE.WebAdmin/Views/Users/_UserInfo.cshtml
@@ -12,22 +12,33 @@ else
 {
     <h3>Инфо</h3>
 }
-@using (Ajax.BeginForm(MVC.Users.EditUserInfo(), new AjaxOptions { HttpMethod = "post", UpdateTargetId = "info", OnBegin = "$(this).closest('section').find('button[type=\"submit\"]').prepend('<i class=\"fa fa-spin fa-spinner\"></i>&nbsp;')", OnComplete = "removeMessage('#mes-user-info')" }))
+@using (Ajax.BeginForm(MVC.Users.EditUserInfo(), new AjaxOptions { HttpMethod = "post", UpdateTargetId = "info", OnBegin = "$(this).closest('section').find('button[type=\"submit\"]').prepend('<i class=\"fa fa-spin fa-spinner\"></i>&nbsp;')", OnComplete = "removeMessage('#mes-user-info')" }, new { @autocomplete="off"}))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
 
-    @Html.LabelFor(x => x.NikName)
-    @Html.EditorFor(x => x.NikName, new { htmlAttributes = new { @class = "form-control" } })
-    @Html.ValidationMessageFor(x => x.NikName)
-    <br />
-
-    @Html.LabelFor(x => x.AvatarId)
-    @Html.EditorFor(x => x.AvatarId, new { htmlAttributes = new { @class = "form-control" } })
-    @Html.ValidationMessageFor(x => x.AvatarId)
-
-    <br />
-    <div class="text-right">
-        <button type="submit" class="btn btn-primary">Сохранить</button>
+    <div class="form-group">
+        @Html.LabelFor(x => x.NikName)
+        @Html.EditorFor(x => x.NikName, new { htmlAttributes = new { @class = "form-control", @placeholder="Введите ник-нейм" } })
+        @Html.ValidationMessageFor(x => x.NikName)
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.AvatarId)
+        @Html.EditorFor(x => x.AvatarId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Выберите аватар" } })
+        @Html.ValidationMessageFor(x => x.AvatarId)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.IsEmployee)
+        @Html.EditorFor(x => x.IsEmployee, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(x => x.IsEmployee)
+    </div>
+
+    <div class="form-group">
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">Сохранить</button>
+        </div>
+    </div>
+
 }
