--- a/GE.WebUI/Content/less/comments.less
+++ b/GE.WebUI/Content/less/comments.less
@@ -7,6 +7,42 @@
     color: @color-white;
 }
 
+.new-comment .text-right{
+    @media (max-width: @screen-xs-max) {
+        text-align:left;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
+}
+
+.new-comment button{
+    @media (max-width: @screen-xs-max) {
+        margin-top:@def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
+}
+
 //comment
 .comment{
     margin-bottom:@def-pad*2;
