--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -38,10 +38,21 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(x => x.AuthorId, new { @class = "control-label" })
-        @Html.EditorFor(x => x.AuthorId, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(x => x.AuthorId)
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.AuthorId, new { @class = "control-label" })
+                @Html.EditorFor(x => x.AuthorId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.AuthorId)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.SourceUrl, new { @class = "control-label" })
+                @Html.EditorFor(x => x.SourceUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.SourceUrl)
+            </div>
+        </div>
     </div>
 
     <div class="form-group">
@@ -55,3 +66,13 @@
         @Html.ActionLink("Назад", MVC.Aphorisms.Index(curCat: Model.CategoryId), new { @class = "btn btn-default" })
     </div>
 </form>
+
+@section scripts{
+    <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript">
+        if (CKEDITOR.instances['Html']) {
+            CKEDITOR.remove(CKEDITOR.instances['Html']);
+        }
+        CKEDITOR.replace('Html', { height: 400 });
+    </script>
+}
