--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -21,6 +21,7 @@
                         <li><a href="#">Выбрать игру</a></li>
                         <li><a href="@Url.Action(MVC.News.List())">Почитать новости</a></li>
                         <li><a href="@Url.Action(MVC.Articles.List())">Почитать статьи</a></li>
+                        <li><a href="@Url.Action(MVC.Aphorisms.List())">Почитать афоризмы и цитаты</a></li>
                         <li><a href="@Url.Action(MVC.SiteQuetions.Edit())">Обратная связь</a></li>
                         @*<li><a href="#">Почитать форум</a></li>*@
                     </ul>
@@ -32,7 +33,7 @@
                     <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
                 </li>
                 <li>
-                    <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы</a>
+                    <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы и цитаты</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
